# boilerplate-rust

./: Cargo.toml  README.md  crates.js  search-index.js  settings.html  source-files.js
.github/: dependabot.yml
.github/workflows/: rust-ci.yml  rust-clippy.yml  rust-publish.yml  scorecards.yml
boilerplate_rust/: all.html  fn.main.html  index.html  sidebar-items.js
boilerplate_rust/adder/: fn.add.html  index.html
src/: adder.rs  main.rs
src/boilerplate_rust/: adder.rs.html  main.rs.html
